I os chenges paralax

--- a/events.html
+++ b/events.html
@@ -67,7 +67,7 @@
     </header>
     <!-- END head -->
 
-    <section class="site-hero overlay" style="background-position: center; background-image: url(images/new-fasad.jpg)" data-stellar-background-ratio="1">
+    <section class="site-hero overlay" style="background-position: center; background-image: url(images/_mg_300.jpg)" data-stellar-background-ratio="1">
      <div class="container">
         <div class="row site-hero-inner justify-content-center align-items-center">
           <div class="col-md-10 text-center" data-aos="fade-up">
@@ -171,7 +171,7 @@
         </div>
       </div>
     </section>
-    <section class="section bg-image overlay" style="background-image: url('images/new-fasad.jpg');">
+    <section class="section bg-image overlay" style="background-image: url('images/_MG_9272-1.JPG');">
         <div class="container" >
           <div class="row align-items-center">
             <div class="col-12 col-md-6 text-center mb-4 mb-md-0 text-md-left" data-aos="fade-up">
