--- a/rooms.html
+++ b/rooms.html
@@ -210,10 +210,10 @@
 
     </div>
   </section>
-<div class="pal section bg-image  " style= "background-size: cover; background-position: center; background-image: url('images/footer_rooms_1.JPG');" >
+<div class="section bg-image site-hero" style= "background-position: center; background-image: url('images/footer_rooms_1.JPG');" >
   <section class="overlay">
     <div class="container" >
-      <div class="row align-items-center">
+      <div class="row align-items-center ">
         <div class="col-12 col-md-6 text-center mb-4 mb-md-0 text-md-left" data-aos="fade-up">
           <h2 class="text-white font-weight-bold">A Best Place To Stay. Reserve Now!</h2>
         </div>
