--- a/rooms.html
+++ b/rooms.html
@@ -210,20 +210,24 @@
 
     </div>
   </section>
-<div class="section bg-image site-hero" style= "background-position: center; background-image: url('images/footer_rooms_1.JPG');" >
-  <section class="overlay">
-    <div class="container" >
-      <div class="row align-items-center ">
-        <div class="col-12 col-md-6 text-center mb-4 mb-md-0 text-md-left" data-aos="fade-up">
-          <h2 class="text-white font-weight-bold">A Best Place To Stay. Reserve Now!</h2>
-        </div>
-        <div class="col-12 col-md-6 text-center text-md-right" data-aos="fade-up" data-aos-delay="200">
-          <a href="reservation.html" class="btn btn-outline-white-primary py-3 text-white px-5">Reserve Now</a>
+  <div class="section bg-image site-hero" style=" 
+background-image: url('images/footer_rooms_1.JPG'); background-position-x: 50%;
+background-position-y: 0%; background-size: cover;
+background-position: center top;
+ background-image: url('images/footer_rooms_1.JPG');">
+    <section class="overlay">
+      <div class="container">
+        <div class="row align-items-center ">
+          <div class="col-12 col-md-6 text-center mb-4 mb-md-0 text-md-left" data-aos="fade-up">
+            <h2 class="text-black font-weight-bold">A Best Place To Stay. Reserve Now!</h2>
+          </div>
+          <div class="col-12 col-md-6  text-center text-md-right" data-aos="fade-up" data-aos-delay="200">
+            <a href="reservation.html" class="btn btn-outline-white-primary py-3 text-white px-5">Reserve Now</a>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
-</div>
+    </section>
+  </div>
 
   <footer class="section footer-section">
     <div class="container">
