--- a/rooms.html
+++ b/rooms.html
@@ -214,7 +214,7 @@
 background-image: url('images/footer_rooms_1.JPG'); background-position-x: 50%;
 background-position-y: 0%; background-size: cover;
 background-position: center top;
- background-image: url('images/footer_rooms_1.JPG');">
+ background-image: url('images/hero_4.jpg');">
     <section class="overlay">
       <div class="container">
         <div class="row align-items-center ">
