--- a/rooms.html
+++ b/rooms.html
@@ -210,16 +210,16 @@
 
     </div>
   </section>
-  <div class="section bg-image site-hero" style=" 
-background-image: url('images/footer_rooms_1.JPG'); background-position-x: 50%;
-background-position-y: 0%; background-size: cover;
-background-position: center top;
- background-image: url('images/hero_4.jpg');">
-    <section class="overlay">
+  <section class="overlay">
+  <div class="section bg-image site-hero" style="
+background-image: -webkit-background-origin: content-box; background-position: 0 0, center;
+ background-size: cover;  background-image: url('images/hero_4.jpg');">
+
+   
       <div class="container">
         <div class="row align-items-center ">
           <div class="col-12 col-md-6 text-center mb-4 mb-md-0 text-md-left" data-aos="fade-up">
-            <h2 class="text-black font-weight-bold">A Best Place To Stay. Reserve Now!</h2>
+            <h2 class="text-white font-weight-bold">A Best Place To Stay. Reserve Now!</h2>
           </div>
           <div class="col-12 col-md-6  text-center text-md-right" data-aos="fade-up" data-aos-delay="200">
             <a href="reservation.html" class="btn btn-outline-white-primary py-3 text-white px-5">Reserve Now</a>
