--- a/rooms.html
+++ b/rooms.html
@@ -101,7 +101,7 @@
               <img src="images/img_1.jpg" alt="Free website template" class="img-fluid mb-3">
             </figure>
             <div class="p-3 text-center room-info">
-              <h2>Single Room</h2>
+              <h2>Гостинная</h2>
               <span class="text-uppercase letter-spacing-1">90$ / per night</span>
             </div>
           </a>
@@ -211,10 +211,7 @@
     </div>
   </section>
   <section class="overlay">
-  <div class="section bg-image site-hero" style="
-background-image: -webkit-background-origin: content-box; background-position: 0 0, center;
- background-size: cover;  background-image: url('images/hero_4.jpg');">
-
+  <div class="section bg-image site-hero" style="background-attachment: scroll; background-size: cover;  background-image: url('images/hero_4.jpg');">
    
       <div class="container">
         <div class="row align-items-center ">
