--- a/index.html
+++ b/index.html
@@ -275,13 +275,14 @@
         </div>
       </div>
     </section>
+   
     <!-- END section -->
     
-    <section class="section bg-image overlay" style="background-image: url('images/bg_paralax_restaraunt_1.jpg');">
+    <section class="section bg-image overlay" style="background-attachment: scroll; background-size: cover; background-position: center; background-size: cover;  background-image: url('images/bg_paralax_restaraunt_1.jpg');">
       <div class="container">
         <div class="row justify-content-center text-center mb-5">
           <div class="col-md-7">
-            <h2 class="heading text-white" data-aos="fade">Our Restaurant Menu</h2>
+            <h2 class="heading text-white" data-aos="fade">Для гостей работает <br> Room servise</h2>
             <p class="text-white" data-aos="fade" data-aos-delay="100">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
           </div>
         </div>
