--- a/rooms.html
+++ b/rooms.html
@@ -211,7 +211,7 @@
     </div>
   </section>
   <section class="overlay">
-  <div class="section bg-image site-hero" style="background-attachment: scroll; background-size: cover;  background-image: url('images/hero_4.jpg');">
+  <div class="section bg-image site-hero" style="background-attachment: scroll;background-size: cover; background-size: cover;  background-image: url('images/__00146.jpg');">
    
       <div class="container">
         <div class="row align-items-center ">
@@ -224,7 +224,6 @@
         </div>
       </div>
     </section>
-  </div>
 
   <footer class="section footer-section">
     <div class="container">
