--- a/events.html
+++ b/events.html
@@ -171,14 +171,14 @@
         </div>
       </div>
     </section>
-    <section class="section bg-image overlay" style="background-image: url('images/_MG_9272-1.JPG');">
+    <section class="section bg-image overlay" style="background-attachment: scroll; background-size: cover; background-position: center; background-size: cover;  background-image: url('images/_MG_9272-1.JPG');">
         <div class="container" >
           <div class="row align-items-center">
             <div class="col-12 col-md-6 text-center mb-4 mb-md-0 text-md-left" data-aos="fade-up">
-              <h2 class="text-white font-weight-bold">A Best Place To Stay. Reserve Now!</h2>
+              <h2 class="text-white font-weight-bold">Лучшая Русская баня в Сириусе</h2>
             </div>
             <div class="col-12 col-md-6 text-center text-md-right" data-aos="fade-up" data-aos-delay="200">
-              <a href="reservation.html" class="btn btn-outline-white-primary py-3 text-white px-5">Reserve Now</a>
+              <a href="reservation.html" class="btn btn-outline-white-primary py-3 text-white px-5">Бронировать</a>
             </div>
           </div>
         </div>
