--- a/events.html
+++ b/events.html
@@ -67,11 +67,15 @@
     </header>
     <!-- END head -->
 
-    <section class="site-hero overlay" style="background-position: center; background-image: url(images/_mg_300.jpg)" data-stellar-background-ratio="1">
-     <div class="container">
+    <section class="site-hero overlay"
+    style="background-position: center; background-image: url(images/_mg_300.jpg)"
+    data-stellar-background-ratio="0.5">
+    <div class="container">
+      <div class="container">
         <div class="row site-hero-inner justify-content-center align-items-center">
           <div class="col-md-10 text-center" data-aos="fade-up">
-            <span class="custom-caption text-uppercase text-white d-block  mb-3">Добро пожаловать<span class="fa fa-star text-primary"></span>Well Don Hotel and SPA</span>
+            <span class="custom-caption text-uppercase text-white d-block  mb-3">Добро пожаловать<span
+                class="fa fa-star text-primary"></span>Well Don Hotel and SPA</span>
             <h1 class="heading">Виллы премиум класса в самом сердце Сириуса</h1>
           </div>
         </div>
@@ -82,7 +86,7 @@
           <span class="mouse-wheel"></span>
         </div>
       </a>
-    </section>
+  </section>
     <!-- END section -->
 
     <section class="section blog-post-entry bg-light" id="next">
@@ -171,20 +175,20 @@
         </div>
       </div>
     </section>
-    <section class="overlay">
-      <div class="section bg-image site-hero" style="background-attachment: scroll;background-size: cover; background-size: cover;  background-image: url('images/_MG_9272-1.JPG');">
-       
-          <div class="container">
-            <div class="row align-items-center ">
-              <div class="col-12 col-md-6 text-center mb-4 mb-md-0 text-md-left" data-aos="fade-up">
-                <h2 class="text-white font-weight-bold">A Best Place To Stay. Reserve Now!</h2>
-              </div>
-              <div class="col-12 col-md-6  text-center text-md-right" data-aos="fade-up" data-aos-delay="200">
-                <a href="reservation.html" class="btn btn-outline-white-primary py-3 text-white px-5">Reserve Now</a>
-              </div>
-            </div>
+    <section class="section bg-image  overlay" style="background-attachment: scroll; background-size: cover; background-position: center; background-image: url('images/_300_mg.JPG')">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-12 col-md-6 text-center mb-4 mb-md-0 text-md-left" data-aos="fade-up">
+            <h2 class="text-white font-weight-bold">
+              Лучший коттеджный комплекс побережья в Сочи
+            </h2>
           </div>
-        </section>
+          <div class="col-12 col-md-6 text-center text-md-right" data-aos="fade-up" data-aos-delay="200">
+            <a href="reservation.html" class="btn btn-outline-white-primary py-3 text-white px-5">Бронировать сейчас</a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <footer class="section footer-section">
       <div class="container">
