--- a/rooms.html
+++ b/rooms.html
@@ -71,7 +71,7 @@
 
 
   <section class="site-hero overlay"
-    style="background-position: center; background-image: url(images/bg_500_rooms_1.jpg)"
+    style=" background-position: center; background-attachment: scroll; background-size: cover; background-image: url(images/bg_500_rooms_1.jpg)"
     data-stellar-background-ratio="0.5">
     <div class="container">
       <div class="container">
@@ -211,7 +211,7 @@
     </div>
   </section>
   <section class="overlay">
-  <div class="section bg-image site-hero" style="background-attachment: scroll;background-size: cover; background-size: cover;  background-image: url('images/__00146.jpg');">
+  <div class="section bg-image site-hero" style="background-attachment: scroll; background-size: cover; background-position: center; background-image: url('images/__00146.jpg');">
    
       <div class="container">
         <div class="row align-items-center ">
