--- a/rooms.html
+++ b/rooms.html
@@ -210,20 +210,21 @@
 
     </div>
   </section>
-  <section class="overlay">
-  <div class="section bg-image site-hero" style="background-attachment: scroll; background-size: cover; background-position: center; background-image: url('images/__00146.jpg');">
-   
-      <div class="container">
-        <div class="row align-items-center ">
-          <div class="col-12 col-md-6 text-center mb-4 mb-md-0 text-md-left" data-aos="fade-up">
-            <h2 class="text-white font-weight-bold">A Best Place To Stay. Reserve Now!</h2>
-          </div>
-          <div class="col-12 col-md-6  text-center text-md-right" data-aos="fade-up" data-aos-delay="200">
-            <a href="reservation.html" class="btn btn-outline-white-primary py-3 text-white px-5">Reserve Now</a>
-          </div>
+  <section class="section bg-image  overlay" style=" background-attachment: scroll; background-size: cover; background-position: center;background-image: url('images/new-fon.jpg')">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-12 col-md-6 text-center mb-4 mb-md-0 text-md-left" data-aos="fade-up">
+          <h2 class="text-white font-weight-bold">
+            Лучший коттеджный комплекс побережья в Сочи
+          </h2>
+        </div>
+        <div class="col-12 col-md-6 text-center text-md-right" data-aos="fade-up" data-aos-delay="200">
+          <a href="reservation.html" class="btn btn-outline-white-primary py-3 text-white px-5">Бронировать сейчас</a>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
+
 
   <footer class="section footer-section">
     <div class="container">
