--- a/about.html
+++ b/about.html
@@ -1,32 +1,33 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>О нас | Well Done Hotel Sochi</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Коттеджи | Well Done Hotel</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <meta name="author" content="" />
   <link rel="shortcut icon" href="./images/well_don_ico.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css"
-    href="//fonts.googleapis.com/css?family=|Roboto+Sans:400,700|Playfair+Display:400,700" />
+    href="//fonts.googleapis.com/css?family=|Roboto+Sans:400,700|Playfair+Display:400,700">
 
-  <link rel="stylesheet" href="css/bootstrap.min.css" />
-  <link rel="stylesheet" href="css/animate.css" />
-  <link rel="stylesheet" href="css/owl.carousel.min.css" />
-  <link rel="stylesheet" href="css/aos.css" />
-  <link rel="stylesheet" href="css/bootstrap-datepicker.css" />
-  <link rel="stylesheet" href="css/jquery.timepicker.css" />
-  <link rel="stylesheet" href="css/fancybox.min.css" />
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/aos.css">
+  <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+  <link rel="stylesheet" href="css/jquery.timepicker.css">
+  <link rel="stylesheet" href="css/fancybox.min.css">
 
-  <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css" />
-  <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">
+  <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
 
   <!-- Theme Style -->
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 
 <body>
   <header class="site-header js-site-header">
@@ -78,27 +79,26 @@
             </div>
           </div>
         </div>
-      </section>background-position: center; background-image: url(images/BG__300.jpg)"
-    data-stellar-background-ratio="1">
-    <div class="container">
-      <div class="row site-hero-inner justify-content-center align-items-center">
-        <div class="col-md-10 text-center" data-aos="fade">
-          <h1 class="heading mb-3">О нас</h1>
-          <ul class="custom-breadcrumbs mb-4">
-            <li><a href="index.html">Главная</a></li>
-            <li>&bullet;</li>
-            <li>О нас</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <a class="mouse smoothscroll" href="#next">
-      <div class="mouse-icon">
-        <span class="mouse-wheel"></span>
-      </div>
-    </a>
-  </section>
+        <section class="site-hero overlay"
+        style=" background-position: center; background-attachment: scroll; background-size: cover; background-image: url(images/bg_500_rooms_1.jpg)"
+        data-stellar-background-ratio="0.5">
+        <div class="container">
+          <div class="container">
+            <div class="row site-hero-inner justify-content-center align-items-center">
+              <div class="col-md-10 text-center" data-aos="fade-up">
+                <span class="custom-caption text-uppercase text-white d-block  mb-3">Добро пожаловать<span
+                    class="fa fa-star text-primary"></span>Well Don Hotel and SPA</span>
+                <h1 class="heading">Виллы премиум класса в самом сердце Сириуса</h1>
+              </div>
+            </div>
+          </div>
+    
+          <a class="mouse smoothscroll" href="#next">
+            <div class="mouse-icon">
+              <span class="mouse-wheel"></span>
+            </div>
+          </a>
+      </section>
   <!-- END section -->
 
   <section class="py-5 bg-light" id="next">
