--- a/rooms.html
+++ b/rooms.html
@@ -184,7 +184,7 @@
       </div>
 
       <div class="site-block-half d-block d-lg-flex bg-white" data-aos="fade" data-aos-delay="100">
-        <a href="#" class="image d-block bg-image-2" style="background-image: url('images/img_1.jpg');"></a>
+        <a href="#" class="image d-block bg-image-2" style="background-image: url('images/_00073.jpg');"></a>
         <div class="text">
           <span class="d-block mb-4"><span class="display-4 text-primary">$199</span> <span
               class="text-uppercase letter-spacing-2">/ per night</span> </span>
@@ -196,7 +196,7 @@
         </div>
       </div>
       <div class="site-block-half d-block d-lg-flex bg-white" data-aos="fade" data-aos-delay="200">
-        <a href="#" class="image d-block bg-image-2 order-2" style="background-image: url('images/img_2.jpg');"></a>
+        <a href="#" class="image d-block bg-image-2 order-2" style="background-image: url('images/_00554.JPG');"></a>
         <div class="text order-1">
           <span class="d-block mb-4"><span class="display-4 text-primary">$299</span> <span
               class="text-uppercase letter-spacing-2">/ per night</span> </span>
@@ -210,7 +210,7 @@
 
     </div>
   </section>
-  <section class="section bg-image  overlay" style=" background-attachment: scroll; background-size: cover; background-position: center;background-image: url('images/new-fon.jpg')">
+  <section class="section bg-image  overlay" style=" background-attachment: scroll; background-size: cover; background-position: center; background-image: url('images/_sunrise_.jpg')">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-12 col-md-6 text-center mb-4 mb-md-0 text-md-left" data-aos="fade-up">
