--- a/rooms.html
+++ b/rooms.html
@@ -184,7 +184,7 @@
       </div>
 
       <div class="site-block-half d-block d-lg-flex bg-white" data-aos="fade" data-aos-delay="100">
-        <a href="#" class="image d-block bg-image-2" style="background-image: url('images/_00073.jpg');"></a>
+        <a href="#" class="image d-block bg-image-2" style="background-image: url('images/respo.jpg');"></a>
         <div class="text">
           <span class="d-block mb-4"><span class="display-4 text-primary">$199</span> <span
               class="text-uppercase letter-spacing-2">/ per night</span> </span>
