--- a/rooms.html
+++ b/rooms.html
@@ -210,7 +210,7 @@
 
     </div>
   </section>
-  <section class="section overlay" style=" background-attachment: scroll; background-size: cover; background-position: center; background-image: url('images/_sunrise_.jpg')">
+  <section class="section bg-image  overlay" style=" background-attachment: scroll; background-size: cover; background-position: center; background-image: url('images/_MG_8092-1.JPG')">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-12 col-md-6 text-center mb-4 mb-md-0 text-md-left" data-aos="fade-up">
